<resources>
    <string name="app_name">TravelJournal</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="profile_name">Toma Andrei</string>
    <string name="profile_email">tomaandrei98@gmail.com</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="footer_mark">®2023</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="currency">EUR</string>
    <string name="add_trip">Add Trip</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="citi_break">Citi Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="save">Save</string>
    <string name="add_or_edit_trip">Add or Edit Trip</string>
    <string name="slide_to_set_the_price">slide to set the price..</string>
    <string name="pick_start_date">Pick Start Date</string>
    <string name="slide_for_price">slide for price..</string>
    <string name="set_price">set price</string>
    <string name="money">money</string>
    <string name="price">price</string>
    <string name="date">Date</string>
    <string name="start_date">start date</string>
    <string name="end_date">end date</string>
    <string name="pick_end_date">Pick End Date</string>
    <string name="city_break">City Break</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
</resources>