<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".database.AddTripActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="49dp"
            android:contentDescription="@string/money"
            android:src="@drawable/baseline_attach_money_24" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            android:layout_width="253dp"
            android:layout_height="81dp"
            android:layout_marginBottom="32dp"
            android:valueFrom="0"
            android:valueTo="2000"
            app:labelBehavior="gone" />

        <TextView
            android:id="@+id/sliderValue"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:layout_gravity="center_vertical"
            android:text="@string/price"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/saveTripButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTripName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/trip_name"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDestination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddOrEditTripTextView" />

    <EditText
        android:id="@+id/editTextDestination"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="destination"
        android:ems="10"
        android:hint="@string/destination"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTripName"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDestination">

        <RadioButton
            android:id="@+id/radioButtonCityBreak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_break" />

        <RadioButton
            android:id="@+id/radioButtonSeaSide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sea_side" />

        <RadioButton
            android:id="@+id/radioButtonMountains"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mountains" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDestination">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/startDateTextView"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/start_date"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pickStartDateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_start_date"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/endDateTextView"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/end_date"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pickEndDateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_end_date"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:labelFor="@id/ratingBar"
        android:numStars="5"
        android:rating="2.5"
        android:stepSize="0.5"
        app:layout_constraintBottom_toTopOf="@+id/saveTripButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/AddOrEditTripTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_or_edit_trip"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTripName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />
</androidx.constraintlayout.widget.ConstraintLayout>